refactor/add missing tests (#18)
* Add basic monopoly (#16)

* chore: update module info deps

* Add Makefile

* Add Makefile (#6)

* added file saving and reading

* switched to using gson

* fixed possible compilation error only occuring in the pipeline

* fixed problem with tests

* fix: added missing module

* Feat/laddergame/basic impl (#10)

* feat: setup classes for snakes and ladders

* chore: temporarily change/comment old implementation

* feat: add reregistration to observers

* feat: abstract gameboard and snakes and ladders class

* feat: update ladder action and add snake action

* feat: control panel controller and view

* feat: gameboard controller and view

* feat: update core models privacy and add fields

* feat: concrete board for snakes and ladders

* feat: factory for boardgames

* feat: basic boardgame application for snakes and ladders

* chore: update module info

* refactor: temporarily comment out while porting to DDD

* chore: add misc to gitignore b/c java provider clashing

* chore: remove unused/wrong files

* feat: add inter font

* feat: update and add ui components

* chore: remove old/wrong tests

* feat: add a basic router

* refactor: update base models and s&l models

* feat: add custom boardgame exceptions

* refactor: update EventType and observer transfer

* feat: update and refactor s&l implementation to use router

* refactor: update main class and module info

* fix: remove old game selection navigation

* refactor: change logging from fine to info

* refactor: add 0 tile

* test: add missing tests after refactoring structure

* fix: add null handling based on test feedback

* Refactor/reorganize project (#12)

* refactor: make observers event driven and auto setup

* refactor: implemenent new observer pattern

* chore: update .gitignore

* chore: update pom and module info

* refactor: change imports, remove system logs, etc

* chore: update .idea

* refactor: split up board game into multiple files

* refactor: move toke