@@ -66,11 +66,13 @@
       <version>${javafx.version}</version>
     </dependency>
 
+
     <!-- Google GSON for JSON handling -->
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>2.10.1</version>
+      <scope>compile</scope>
     </dependency>
   </dependencies>
 
@@ -88,6 +90,14 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.2.5</version>
+        <configuration>
+          <argLine>
+            --add-opens edu.ntnu.stud.boardgame/edu.ntnu.stud.boardgame.io.board=ALL-UNNAMED
+            --add-opens edu.ntnu.stud.boardgame/edu.ntnu.stud.boardgame.model=ALL-UNNAMED
+            --add-opens edu.ntnu.stud.boardgame/edu.ntnu.stud.boardgame.model.action=ALL-UNNAMED
+            --add-opens edu.ntnu.stud.boardgame/edu.ntnu.stud.boardgame.exception.files=ALL-UNNAMED
+          </argLine>
+        </configuration>
       </plugin>
 
       <!-- JavaFX Maven plugin -->
@@ -118,6 +128,11 @@
 
       <!-- JaCoCo test coverage -->
       <plugin>
+        <configuration>
+              <excludes>
+                <exclude>**/view/**</exclude>
+              </excludes>
+            </configuration>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
         <version>${jacoco.version}</version>
@@ -134,14 +149,7 @@
             <goals>
               <goal>report</goal>
             </goals>
-            <configuration>
-              <excludes>
-                <exclude>**/view/**</exclude>
-                <exclude>**/BoardGameMain.*</exclude>
-                <exclude>**/event/**</exclude>
-                <exclude>**/exception/**</exclude>
-              </excludes>
-            </configuration>
+            
           </execution>
         </executions>
       </plugin>
